--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,4 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        run: git push https://HF_USERNAME:$HF_TOKEN@huggingface.co/spaces/thewayofwisedom/5-deploy-ml main
+        run: git push --force https://thewayofwisedom:$HF_TOKEN@huggingface.co/spaces/thewayofwisedom/5-deploy-ml main
