--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "pandas (>=2.3.3,<3.0.0)",
     "numpy (>=2.4.1,<3.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)"
+    "psycopg2-binary (>=2.9.11,<3.0.0)",
+    "joblib (>=1.5.3,<2.0.0)"
 ]
 
 [tool.poetry]
