--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "numpy (>=2.4.1,<3.0.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "joblib (>=1.5.3,<2.0.0)"
+    "joblib (>=1.5.3,<2.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)"
 ]
 
 [tool.poetry]
